Closed Bug 113935 Opened 24 years ago Closed 24 years ago

Linux IMAP protocol logs don't get cleared out after each run

Categories

(NSPR :: NSPR, defect, P2)

x86
Linux

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: huang, Assigned: wtc)

Details

(Keywords: platform-parity)

Attachments

(1 file)

Used 12-06-09-trunk build Linux IMAP protocol logs don't get cleared out after each run. IMAP log will get generated for multiple runs whic is really annoying. 1)Setup the IMAP log for Linux (C Shell) platform as following: Add a line to ~/.cshrc file of the csh shell: Set NSPR_LOG_MODULES IMAP:5 Set NSPR_LOG_FILE /u/[unix userlogin]/tmp/[filename] (filename can be defined by you) 2)After Login to Netscape IMAP Mail for a couple times and check for the IMAP protocol logs Actual Results: The IMAP protocol logs don't get cleared out after each run, log will get generated for multiple runs. Expected results: The IMAP protocol logs should get cleared out after each run.
Adding pp for the keywords since problem is only occurring for the Linux platform. Adding nsbeta1 since from SUPPORT point of view, this should be fixed for the next release.
Keywords: nsbeta1, pp
Attached patch Proposed patchSplinter Review
Thanks for the bug report, Karen. The fix is to truncate the log file to zero length if it already exists (leftover from a previous run). Could you give this patch a try? Do you know what other platforms don't have this problem? I bet Windows is the only one that is not affected by this bug.
I checked in the fix into the tip and client branch of NSPR.
Status: NEW → RESOLVED
Closed: 24 years ago
Priority: -- → P2
Resolution: --- → FIXED
Target Milestone: --- → 4.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: