Bugzilla bug 113935: truncate the log file if it already exists.